--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,34 @@
+html {
+	scroll-padding-top: 70px; /* height of sticky header */
+  }
+
 body {
 	max-width: 1200px;
 	font-size: 16px;
 	margin: auto;
-	padding: 20px;
+	padding: 0 20px 20px 20px;
+}
+
+#site-title {
+	font-size: 40px;
+	margin-top: 10%;
+	padding-top: 20px;
+}
+
+#site-description {
+	font-size: 20px;
+	padding-bottom: 20px;
+}
+
+#site-title, #site-description {
+	display: flex;
+	justify-content: center;
+}
+
+#nav-list {
+	align-self: center;
+}
+
+#search-input, #search-btn {
+	margin-bottom: 15px;
 }
