--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,8 @@
-html {
-	scroll-padding-top: 70px; /* height of sticky header */
-  }
-
-body {
+.main-content {
 	max-width: 1200px;
 	font-size: 16px;
 	margin: auto;
-	padding: 0 20px;
+	padding: 20px;
 	scroll-behavior: smooth;
 }
 
@@ -47,14 +43,19 @@ article {
 }
 
 footer {
-	margin-top: 20px;
+	/* max-width: 100%; */
+	margin-top: 50px;
 	padding: 20px 0;
+	/* left: 0;
+  	right: 0; */
+  	width: 100%;
 	background-color: #F8F9FA;
 }
 
 footer p {
 	display: flex;
-	align-items: center;
+	align-self: flex-end;
 	justify-content: center;
-	padding-top: 20px;
+	padding-top: 50px;
+	font-size: 0.8em;
 }
