--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ article {
 	margin-top: -20px;
 }
 
+#contact-form {
+	max-width: 600px;
+}
+
 footer {
 	/* max-width: 100%; */
 	margin-top: 50px;
