--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@
 	scroll-margin-top: 90px;
 }
 
+.brand-logo-img {
+	object-fit: cover;
+	width: 50px;
+	height: 50px;
+	border: 1px solid #7843E9;
+	border-radius: 50%;
+	background-color: #7843E9;;
+}
+
 #site-title {
 	font-size: 40px;
 	margin-top: 10%;
