--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                 </li>
             </ul>
             <form class="d-flex mt-3" role="search">
