--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid mx-2 mx-xl-4">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="/src/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
             Jen Patchett
         </a>
@@ -10,13 +10,13 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Jen Patchett</h5>
+            <a class="navbar-brand" href="/"><h5 class="offcanvas-title" id="offcanvasNavbarLabel">Jen Patchett</h5></a>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
             <ul id="nav-list" class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#top">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
