Create contact form partial; update base layout

--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,7 +3,7 @@ title: "Jen Patchett"
 layout: "base.njk"
 ---
 
-<section id="contact" class="row scroll-margin-top">
+<section id="contact" class="row ">
     <h2>Contact</h2>
     <form id="contact-form" method="post" action="#">
         <fieldset class="mb-3 contact-form">
