--- a/src/index.njk
+++ b/src/index.njk
@@ -9,5 +9,6 @@ layout: "base.njk"
     <h2 id="main-description">Web Developer & Software Automation Tester</h2>
 </section>
 
+{# Import About and Skills partials #}
 {% include "about.njk" %}
 {% include "skills.njk" %}
