--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -20,6 +20,7 @@
 
 		<main class="main-content px-sm-5">
 
+			{# Import content from templates and partials #}
 			{{ content | safe }}
 
 			
@@ -56,11 +57,6 @@
 					</div>
 				</div>
 			</section>
-
-			
-
-
-			{# <!-- Contact Section --> #}
 			
 		</main>
 
