--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,8 @@
 	align-self: center;
 }
 
-#search-input, #search-btn {
+#search-input,
+#search-btn {
 	margin-bottom: 15px;
 }
 
@@ -51,10 +52,10 @@ section {
 	width: auto;
 }
 
-.carousel-item > img {
+.carousel-item>img {
 	height: 300px;
 	width: auto;
-	object-fit:cover;
+	object-fit: cover;
 }
 
 .card-title {
@@ -111,10 +112,15 @@ fieldset {
 	margin-left: 2px;
 }
 
+#contact {
+	margin-top: 10%;
+	padding-top: 50px;
+}
+
 footer {
 	margin-top: 50px;
 	padding: 50px 0 20px 0;
-  	width: 100%;
+	width: 100%;
 	background-color: #F8F9FA;
 	font-size: 0.8em;
 	text-align: center;
