--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -3,9 +3,6 @@
     {# <!-- About --> #}
     <div class="col-12 col-lg-6">
         <h2>Hello, I'm Jen</h2>
-
-        {# {{ content | safe }} #}
-
         <p>I'm a web developer and former software automation tester at Sky UK Ltd, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
         <p>In nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et.</p>
     </div>
@@ -21,16 +18,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/profile-img-main.jpeg" class="d-block w-100" alt="Photo of Jen sitting in front of a digital piano with a music book open on the music stand, a green ornamental duck in a pink hat sitting on the left side of the piano and a large green clock on the wall behind">
+                    <img src="/images/profile-img-main.jpg" class="d-block w-100" alt="Photo of Jen sitting in front of a digital piano with a music book open on the music stand, a green ornamental duck in a pink hat sitting on the left side of the piano and a large green clock on the wall behind">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/coding.jpg" class="d-block w-100" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
+                    <img src="/images/coding.jpg" class="d-block w-100" alt="An Apple MacBook with an iPhone placed on the keyboard and notebook to the side on the desk">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/computer-screens.png" class="d-block w-100" alt="Two computer screens on a plain blue background">
+                    <img src="/images/computer-screens.png" class="d-block w-100" alt="Two computer screens on a plain blue background">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/macbook-code.jpg" class="d-block w-100" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background">
+                    <img src="/images/macbook-code.jpg" class="d-block w-100" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
