--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid mx-2 mx-xl-4">
         <a class="navbar-brand" href="/#top">
-            <img src="/src/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
+            <img src="/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
             Jen Patchett
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
             </ul>
             <form class="d-flex mt-3" role="search">
                 <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button id="search-btn" class="btn" type="submit"><img src="src/images/search.svg" alt="search button"> </button>
+                <button id="search-btn" class="btn" type="submit"><img src="/images/search.svg" alt="search button"> </button>
             </form>
             </div>
         </div>
