--- a/src/index.njk
+++ b/src/index.njk
@@ -12,3 +12,4 @@ layout: "base.njk"
 {# Import About and Skills partials #}
 {% include "about.njk" %}
 {% include "skills.njk" %}
+{% include "project-grid.njk" %}
