--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link" href="/#projects">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
