--- a/src/_includes/project-card.njk
+++ b/src/_includes/project-card.njk
@@ -1,10 +1,11 @@
 {# Partial for an individual project preview #}
 
-<article class="card" style="width: 18rem;">
+<article class="card col-lg">
     {# update to use below instead of img ref after npm install @11ty/eleventy-img #}
   {# {% EleventyImage project.data.image, project.data.imageAlt, "(min-width: 30em) 50vw, 100vw" %} #}
-    
-    <a href="{{ project.url }}" target="_blank"><img src="/images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background"></a>
+    <div class="project-card__image-wrapper">
+      <a href="{{ project.url }}" target="_blank"><img src="/images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background"></a>
+    </div>
   <div class="card-body">
     <div class="project-card__tags">
       {% for tag in project.data.tech %}
