--- a/src/_includes/project-grid.njk
+++ b/src/_includes/project-grid.njk
@@ -2,7 +2,7 @@
 
 <section id="projects" class="projects scroll-margin-top">
     <h2 class="heading-mb">Recent projects</h2>
-    <div class="project-grid">
+    <div class="project-grid row gx-0">
         {% asyncEach project in collections.projects %}
         {% include "project-card.njk" %}
         {% endeach %} 
