--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid mx-2 mx-xl-4">
-        <a class="navbar-brand" href="/#top">
+        <a class="navbar-brand" href="/">
             <img src="/images/brand-logo-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
             Jen Patchett
         </a>
@@ -10,7 +10,7 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-            <a class="navbar-brand" href="/#top"><h5 class="offcanvas-title" id="offcanvasNavbarLabel">Jen Patchett</h5></a>
+            <a class="navbar-brand" href="/"><h5 class="offcanvas-title" id="offcanvasNavbarLabel">Jen Patchett</h5></a>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
