Fix css not loading & footer position to bottom

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -18,13 +18,13 @@
         {% include "header.njk" %}
 		
 
-		<main class="main-content px-sm-5">
+		<main class="main-content px-sm-5 mt-md-4">
 
 			{# Import content from templates and partials #}
 			{{ content | safe }}
 			
 		</main>
-
+		
         {# <!-- Footer --> #}
         {% include "footer.njk" %}
 
