--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+body {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+
 .main-content {
 	max-width: 1200px;
 	font-size: 16px;
@@ -7,7 +13,7 @@
 }
 
 .scroll-margin-top {
-	scroll-margin-top: 90px;
+	scroll-margin-top: 110px;
 }
 
 .brand-logo-img {
@@ -22,6 +28,8 @@
 
 #heading {
 	text-align: center;
+	margin-bottom: 50px;
+	;
 }
 
 #main-title {
@@ -44,7 +52,7 @@
 }
 
 section {
-	margin: 70px 0;
+	margin: 55px 0 80px 0;
 }
 
 .carousel-inner {
@@ -110,13 +118,12 @@ fieldset {
 }
 
 #contact {
-	margin-top: 10%;
-	padding-top: 50px;
+	margin-top: 100px;
 }
 
 footer {
-	margin-top: 50px;
-	padding: 50px 0 20px 0;
+	margin: 50px 0 0 0;
+	padding: 50px 0 50px 0;
 	width: 100%;
 	background-color: #F8F9FA;
 	font-size: 0.8em;
