Add 5px padding-right to Skills accordion body

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,8 +103,9 @@ section {
 	font-weight: 500;
 }
 
-.accordion-body {
+.accordion-body p {
 	margin-left: 10px;
+	padding-right: 5px;
 }
 
 fieldset {
