--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 	font-size: 16px;
 	margin: auto;
 	padding: 0 20px;
-	scroll-behavior: smooth;
+	/* scroll-behavior: smooth; */
 }
 
 .scroll-margin-top {
