Add contact form border media query md screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,7 +88,7 @@ section {
 }
 
 .accordion-button:not(.collapsed) {
-	background-color: #e1e6ea;
+	background-color: #e6e6e6;
 	box-shadow: none;
 	font-weight: 500;
 	color: #212529;
@@ -99,7 +99,7 @@ section {
 }
 
 .accordion-button:hover {
-	background-color: #e1e6ea;
+	background-color: #e6e6e6;
 	font-weight: 500;
 }
 
@@ -120,6 +120,16 @@ fieldset {
 
 #contact {
 	margin-top: 100px;
+}
+
+@media only screen and (min-width: 768px) {
+
+	/* For desktop and tablet: */
+	#contact {
+		border: 1px solid #e6e6e6;
+		border-radius: 7px;
+		padding: 20px;
+	}
 }
 
 footer {
