--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,6 +11,8 @@
 		
 		{# <!-- Additional Stylesheet --> #}
 		<link rel="stylesheet" href="{{'/styles.css' | url | safe}}">
+
+		{# <script defer src="./src/app.js"></script> #}
 	</head>
 
 	<body>
