Update About; hide Search field in nav; w=1400

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -3,8 +3,8 @@
     {# <!-- About --> #}
     <div class="col-12 col-lg-6">
         <h2>Hello, I'm Jen</h2>
-        <p>I'm a web developer and former software automation tester at Sky UK Ltd, currently refreshing my coding skills with <a href="https://thecodersguild.org.uk" target="_blank">The Coder's Guild</a> in order to return to tech after a career break. In my spare time I enjoy gaming, creating electronic music and teaching piano.</p>
-        <p>In nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et.</p>
+        <p>I'm a freelance web developer at Purple 41 Web Design and a former software automation tester at Sky UK Ltd. After a career break where I retrained as a primary school teacher, I decided to return to tech. I began the Skills Bootcamp in Web Design and Development course with <a href="https://thecodersguild.org.uk/course-directory/get-hired-as-a-software-developer/" target="_blank">The Coder's Guild</a> in November 2023 in order to refresh my skills and return to a career in tech.</p>
+        <p>I founded Purple 41 Web Design in 2023 after branching out as a freelance web developer when a family member asked me to enhance their existing business website hosted on Wix. I design and build custom websites from scratch with HTML, CSS and JavaScript, and maintain existing web and e-commerce sites hosted on Wix and WordPress. Take a look at the <a href="/#projects">Projects</a> section for examples of some of my recent work.</p>
     </div>
 
     {# <!-- Carousel --> #}
