--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -31,9 +31,9 @@
                     <a class="nav-link" href="/contact">Contact</a>
                 </li>
             </ul>
-            <form class="d-flex mt-3" role="search">
+            {# <form class="d-flex mt-3" role="search">
                 <input id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button id="search-btn" class="btn" type="submit"><img src="/images/search.svg" alt="search button"> </button>
+                <button id="search-btn" class="btn" type="submit"><img src="/images/search.svg" alt="search button"> </button> #}
             </form>
             </div>
         </div>
