Update About section

--- a/src/_includes/project-card.njk
+++ b/src/_includes/project-card.njk
@@ -3,7 +3,7 @@
 <article class="card col-lg">
     {# update to use below instead of img ref after npm install @11ty/eleventy-img #}
   {# {% EleventyImage project.data.image, project.data.imageAlt, "(min-width: 30em) 50vw, 100vw" %} #}
-    <div class="project-card__image-wrapper">
+    <div>
       <a href="{{ project.url }}" target="_blank"><img src="/images/macbook-code.jpg" class="card-img-top" alt="A half-visible MacBook with computer code on the screen and an iPhone on the desk in the background"></a>
     </div>
   <div class="card-body">
