--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -4,7 +4,7 @@
     <div class="col-12 col-lg-6">
         <h2>Hello, I'm Jen</h2>
         <p>I'm a freelance web developer at Purple 41 Web Design and a former software automation tester at Sky UK Ltd. After a career break where I retrained as a primary school teacher, I decided to return to tech. I began the Skills Bootcamp in Web Design and Development course with <a href="https://thecodersguild.org.uk/course-directory/get-hired-as-a-software-developer/" target="_blank">The Coder's Guild</a> in November 2023 in order to refresh my skills and return to a career in tech.</p>
-        <p>I founded Purple 41 Web Design in 2023 after branching out as a freelance web developer when a family member asked me to enhance their existing business website hosted on Wix. I design and build custom websites from scratch with HTML, CSS and JavaScript, and maintain existing web and e-commerce sites hosted on Wix and WordPress. Take a look at the <a href="/#projects">Projects</a> section for examples of some of my recent work.</p>
+        <p>I founded Purple 41 Web Design in 2023 after branching out as a freelance web developer when a family member asked me to enhance their existing business website hosted on Wix. I design and build custom websites from scratch, and maintain existing web and e-commerce sites hosted on Wix and WordPress. Take a look at the <a href="/#projects">Projects</a> section for examples of some of my recent work.</p>
     </div>
 
     {# <!-- Carousel --> #}
