Edit About Carousel responsive behaviour

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -3,12 +3,12 @@
     {# <!-- About --> #}
     <div class="col-12 col-lg-6">
         <h2>Hello, I'm Jen</h2>
-        <p>I'm a freelance web developer at Purple 41 Web Design and a former software automation tester at Sky UK Ltd. After a career break where I retrained as a primary school teacher, I decided to return to tech. I began the Skills Bootcamp in Web Design and Development course with <a href="https://thecodersguild.org.uk/course-directory/get-hired-as-a-software-developer/" target="_blank">The Coder's Guild</a> in November 2023 in order to refresh my skills and return to a career in tech.</p>
-        <p>I founded Purple 41 Web Design in 2023 after branching out as a freelance web developer when a family member asked me to enhance their existing business website hosted on Wix. I design and build custom websites from scratch, and maintain existing web and e-commerce sites hosted on Wix and WordPress. Take a look at the <a href="/#projects">Projects</a> section for examples of some of my recent work.</p>
+        <p>I’m a full-stack JavaScript developer and former Java automation tester with a keen interest in APIs and a passion for creating accessible, user-friendly products. I’m a visual and hands-on learner with a demonstrable commitment to continuing personal and professional development. I enjoy pair programming, collaborating in a small team and mentoring others. I'm currently a freelance web developer at Purple 41 Web Design, following a tech career break where I retrained as a primary school teacher. To refresh my coding skills I am completing the Bootcamp in Web Design and Development evening course with <a href="https://thecodersguild.org.uk/course-directory/get-hired-as-a-software-developer/" target="_blank">The Coder's Guild</a>.</p>
+        <p>I founded Purple 41 Web Design in 2023 when a family member asked me to enhance their existing business website hosted on Wix. I now design and build custom websites from scratch, and maintain existing web and e-commerce sites hosted on Wix and WordPress. Take a look at the <a href="/#projects">Projects</a> section to see some of my recent work.</p>
     </div>
 
     {# <!-- Carousel --> #}
-    <div id="img-carousel-about" class="col-12 col-lg-6 mt-md-3">
+    <div id="img-carousel-about" class="col-12 col-lg-6 mt-md-5">
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
