Update Relevant Experience section in accordion

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -15,12 +15,34 @@
     <div class="accordion-item">
         <h3 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Experience</button>
+            Relevant Experience</button>
         </h3>
         <div id="collapseTwo" class="accordion-collapse collapse row" data-bs-parent="#skills">
             <div class="accordion-body">
-                <p><strong>This is the second section's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
-                <p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+                <article>
+                    <h4>Full-Stack Web Developer</h4>
+                    <h5>Purple 41 Web Design (self-employed / freelance)</h5>
+                    <p>Designing, building and maintaining full-stack web applications for a range of clients. Building websites from scratch. Updating existing e-commerce and booking sites hosted on Wix and WordPress. Adding new features; improving user experience and accessibility; estimating tasks; exploratory and regression testing; bug reports.</p>
+                </article>
+                
+                <article>
+                    <h4>Web Developer</h4>
+                    <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
+                    <p>Maintained multiple WordPress WooCommerce sites for the company and its sister companies, including writing custom code. Designed and built custom page templates using HTML5 and CSS for the company’s eBay product listings to reflect themes used on their websites. Conducted exploratory and regression testing. Worked closely with company directors and marketing team. Delivered web accessibility training to colleagues and established formal documentation. Implemented agile methodologies.</p>
+                </article>
+
+                <article>
+                    <h4>Software Automation Tester</h4>
+                    <h5>Sky UK Ltd, Leeds Dock (hybrid)</h5>
+                    <p>Began as a graduate trainee automation tester (6 months). Projects included a booking and weather web application, followed by an internal iOS data reporting app for the My Sky App tribe, both designed and built from scratch. Automation testing tech stack included Java, Cucumber, Selenium, Postman and Appium.</p>
+                    <p>I then worked in the Sky Identity tribe on backend Java projects, end-to-end and regression testing APIs. Tech stack included Gauge Java BDD framework, Postman, Docker, Jenkins, CircleCI, Octopus and Kubernetes. I provided code reviews, regularly pair programmed and created Confluence documentation explaining backend architecture for new starters. In addition, I supported Sky’s <a href="https://getintotech.sky.com/courses/get-into-tech/">‘Get into Tech’</a> women’s coding initiative and facilitated a monthly support group for Leeds colleagues living with chronic pain and long-term conditions.</p>
+                </article>
+
+                <article>
+                    <h4>Online Coordinator</h4>
+                    <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
+                    <p>Responsible for maintaining multiple social media sites and WordPress blog for the main company and its sister companies. Worked closely with company directors, sales and marketing teams.</p>
+                </article>
             </div>
         </div>
     </div>
