Update Experience and About

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -21,13 +21,13 @@
             <div class="accordion-body">
                 <article>
                     <h4>Full-Stack Web Developer</h4>
-                    <h5>Purple 41 Web Design (self-employed / freelance)</h5>
+                    <h5>Freelance / Self-Employed</h5>
                     <p>Designing, building and maintaining full-stack web applications for a range of clients. Building websites from scratch. Updating existing e-commerce and booking sites hosted on Wix and WordPress. Adding new features; improving user experience and accessibility; estimating tasks; exploratory and regression testing; bug reports.</p>
                 </article>
                 
                 <article>
                     <h4>Web Developer</h4>
-                    <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
+                    <h5>Remote Employment</h5>
                     <p>Maintained multiple WordPress WooCommerce sites for the company and its sister companies, including writing custom code. Designed and built custom page templates using HTML5 and CSS for the company’s eBay product listings to reflect themes used on their websites. Conducted exploratory and regression testing. Worked closely with company directors and marketing team. Delivered web accessibility training to colleagues and established formal documentation. Implemented agile methodologies.</p>
                 </article>
 
