Update Education section

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -27,7 +27,7 @@
                 
                 <article>
                     <h4>Web Developer</h4>
-                    <h5>Remote Employment</h5>
+                    <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
                     <p>Maintained multiple WordPress WooCommerce sites for the company and its sister companies, including writing custom code. Designed and built custom page templates using HTML5 and CSS for the company’s eBay product listings to reflect themes used on their websites. Conducted exploratory and regression testing. Worked closely with company directors and marketing team. Delivered web accessibility training to colleagues and established formal documentation. Implemented agile methodologies.</p>
                 </article>
 
@@ -53,8 +53,35 @@
         </h3>
         <div id="collapseThree" class="accordion-collapse collapse row" data-bs-parent="#skills">
             <div class="accordion-body">
-                <p><strong>This is the third section's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
-                <p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+                <article>
+                    <h4>The Coders Guild</h4>
+                    <p>Skills Bootcamp in Web Design & Development</p>
+                </article>
+
+                <article>
+                    <h4>University of Leeds</h4>
+                    <p>Postgraduate Certificate in Education (PGCE) with Qualified Teacher Status (QTS)</p>
+                </article>
+
+                <article>
+                    <h4>The Open University</h4>
+                    <p>Master of Arts (MA)</p>
+                </article>
+
+                <article>
+                    <h4>Sky UK Ltd, Leeds Dock</h4>
+                    <p>Sky ‘Get Into Tech’ Full Stack Software Development Bootcamp</p>
+                </article>
+
+                <article>
+                    <h4>University of Hertfordshire</h4>
+                    <p>Procedural & Object-Oriented Programming (module)</p>
+                </article>
+
+                <article>
+                    <h4>The Open University</h4>
+                    <p>Bachelor Of Arts (Hons) 2:1</p>
+                </article>
             </div>
         </div>
     </div>
