Correct an error on Experience section. Add style to links in main

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -35,7 +35,7 @@
                     <h4>Software Automation Tester</h4>
                     <h5>Sky UK Ltd, Leeds Dock (hybrid)</h5>
                     <p>Began as a graduate trainee automation tester (6 months). Projects included a booking and weather web application, followed by an internal iOS data reporting app for the My Sky App tribe, both designed and built from scratch. Automation testing tech stack included Java, Cucumber, Selenium, Postman and Appium.</p>
-                    <p>I then worked in the Sky Identity tribe on backend Java projects, end-to-end and regression testing APIs. Tech stack included Gauge Java BDD framework, Postman, Docker, Jenkins, CircleCI, Octopus and Kubernetes. I provided code reviews, regularly pair programmed and created Confluence documentation explaining backend architecture for new starters. In addition, I supported Sky’s <a href="https://getintotech.sky.com/courses/get-into-tech/">‘Get into Tech’</a> women’s coding initiative and facilitated a monthly support group for Leeds colleagues living with chronic pain and long-term conditions.</p>
+                    <p>I then worked in the Sky Identity tribe on backend Java projects, end-to-end and regression testing APIs. Tech stack included Gauge Java BDD framework, Postman, Docker, Jenkins, CircleCI, Octopus and Kubernetes. I provided code reviews, regularly pair programmed and created Confluence documentation explaining backend architecture for new starters. In addition, I supported Sky’s <a href="https://getintotech.sky.com/courses/get-into-tech/">Get into Tech</a> women’s coding initiative and facilitated a monthly support group for Leeds colleagues living with chronic pain and long-term conditions.</p>
                 </article>
 
                 <article>
