--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -6,9 +6,76 @@
             Skills</button>
         </h3>
         <div id="collapseOne" class="accordion-collapse collapse show row" data-bs-parent="#skills">
-            <div class="accordion-body">
-                <p><strong>This is the first section's accordion body. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc congue nisi vitae suscipit tellus. Pharetra sit amet aliquam id diam maecenas ultricies mi. Egestas sed sed risus pretium quam vulputate. Nisl suscipit adipiscing bibendum est. Sit amet risus nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Orci porta non pulvinar neque laoreet suspendisse. Ultricies mi quis hendrerit dolor magna eget. Urna porttitor rhoncus dolor purus non. In egestas erat imperdiet sed euismod nisi porta. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Id velit ut tortor pretium viverra suspendisse potenti. Diam vulputate ut pharetra sit amet. Amet facilisis magna etiam tempor orci eu.</p>
-                <p>In nisl nisi scelerisque eu ultrices vitae. Scelerisque mauris pellentesque pulvinar pellentesque. Sodales ut eu sem integer vitae justo. Felis donec et odio pellentesque diam volutpat commodo sed. Ullamcorper eget nulla facilisi etiam. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. In fermentum et sollicitudin ac orci phasellus egestas. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Gravida arcu ac tortor dignissim convallis aenean et. Ut tortor pretium viverra suspendisse potenti nullam. Neque volutpat ac tincidunt vitae semper. Aliquet nibh praesent tristique magna sit amet.</p>
+            <div class="accordion-body row">
+                <article class="col-md-4 ">
+                    <h4>Soft Skills</h4>
+                    <ul class="split-col split-col-md">
+                        <li>Problem solving</li>
+                        <li>Communication</li>
+                        <li>Planning</li>
+                        <li>Organisation</li>
+                        <li>Time management</li>
+                        <li>Attention to detail</li>
+                        <li>Mentoring</li>
+                        <li>Teaching</li>
+                        <li>Interpersonal skills</li>
+                        <li>Resilience</li>
+                        <li>Diversity & inclusion</li>
+                    </ul>
+                </article>
+
+                <article class="col-md-5">
+                    <h4>Software Development</h4>
+                    <ul class="split-col">
+                        <li>JavaScript</li>
+                        <li>React.js</li>
+                        <li>Node.js</li>
+                        <li>HTML5</li>
+                        <li>Nunjucks</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        <li>11ty SSG</li>
+                        <li>Accessibility</li>
+                        <li>Git</li>
+                        <li>Agile</li>
+                        <li>Jira</li>
+                        <li>Bash / Zsh</li>
+                        <li>Netlify</li>
+                        <li>WordPress</li>
+                        <li>Wix</li>
+                        <li>OOP</li>
+                        <li>Java</li>
+                        <li>PhP</li>
+                        <li>MySQL</li>
+                        <li>JSON</li>
+                        <li>APIs</li>
+                        <li>MVC</li>
+                        <li>Docker</li>
+                        <li>Jenkins</li>
+                        <li>Circle CI</li>
+                        <li>Octopus</li>
+                        <li>Kubernetes</li>
+                    </ul>
+                </article>
+
+                <article class="col-md-3">
+                    <h4 id="hide-md">Software Testing</h4>
+                    <h4 id="hide-not-md">Testing</h4>
+                    <ul class="split-col split-col-md">
+                        <li>Exploratory</li>
+                        <li>Automation</li>
+                        <li>End-to-end</li>
+                        <li>Regression</li>
+                        <li>Usability</li>
+                        <li>Functional</li>
+                        <li>API</li>
+                        <li>Postman</li>
+                        <li>Gauge-Java BDD</li>
+                        <li>Cucumber BDD</li>
+                        <li>Selenium</li>
+                        <li>Appium</li>
+                    </ul>
+                </article>
             </div>
         </div>
     </div>
