Update job title

--- a/src/_includes/skills.njk
+++ b/src/_includes/skills.njk
@@ -106,7 +106,7 @@
                 </article>
 
                 <article>
-                    <h4>Online Coordinator</h4>
+                    <h4>Online Information Coordinator</h4>
                     <h5>A Yorkshire-Based Paint and Coatings Company (remote)</h5>
                     <p>Responsible for maintaining multiple social media sites and WordPress blog for the main company and its sister companies. Worked closely with company directors, sales and marketing teams.</p>
                 </article>
